- Added section-include element to include a section from another screen
- In a form-list with no @list-entry attribute creates a
  ${@list}_entry field along with the _index and _has_next fields for
  convenience in getting at the object in the List (which implements the
  Map interface, often an EntityValue and nice to get at it directly)

Bug Fixes:

- Fixed delete buttons not working on the Find Auto Screen
- Fixed links with images (link.image element) FTL error
- Required service parameters used to use the Groovy definition of empty
  but this is annoying for numbers and such (a zero is generally a valid
  non-empty service parameter), so now uses null for any object or zero
  length String as the definition of empty for required parameters

===========================================================================
Release 1.4.1 - 01 Aug 2014
===========================================================================

Moqui Framework 1.4.1 is a minor new feature and bug fix release. Many of
the new features and bug fixes are related to multi-tenant support
including better isolation of tenants and tenant provisioning services.
Other fixes and improvements are related to Service ECA rules, jobs, DB
setup, and the tx cache.

This release also has various embedded documentation (annotations, etc)
improvements done along with the Making Apps with Moqui book which is now
available and has comprehensive documentation of Moqui Framework and a
summary of Mantle Business Artifacts.

NOTE: Starting with this version Moqui Framework requires Java 7 or later
because updated libraries require Java 7. Partly because of this Moqui
itself will also start to use Java 7 features.

New Features:

- Updated Apache Jackrabbit to 2.8.0, Apache Lucene to 4.8.1,
  ElasticSearch to 1.2.1
- Added UserGroupPreference, like UserPreference but for user groups.
  UserFacade.getPreference() now looks for group preference when no user
  preference is found.