@@ -38,10 +38,10 @@ This Work includes contributions authored by David E. Jones, not as a
             <field name="cache"><default-field><hidden default-value="N"/></default-field></field>
             <field name="isDataView"><default-field><hidden default-value="Y"/></default-field></field>
             <field name="submitButton"><default-field title="Create"><submit/></default-field></field>
-            <field-layout><field-row>
+            <field-layout><field-row-big>
                 <field-ref name="dbViewEntityName"/><field-ref name="packageName"/>
                 <field-ref name="cache"/><field-ref name="isDataView"/><field-ref name="submitButton"/>
-            </field-row></field-layout>
+            </field-row-big></field-layout>
         </form-single>
         <form-list name="ListDbViewEntities" list="dbViewEntityList">
             <field name="dbViewEntityName">
